--- a/trellomini/trellomini/templates/base.html
+++ b/trellomini/trellomini/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +8,8 @@
 
     <!-- Add CSS and JS links here -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="{% static 'trellomini/css/base.css' %}">
+    <link rel="stylesheet" href="{% static 'projects/css/kanban.css' %}">
     <title>{% block title %}My App{% endblock %}</title>
 </head>
 <body>
@@ -17,15 +19,39 @@
 
     <main>
         <div class="container">
+
+            <!-- Flash messages -->
+            <div class="toast-container position-fixed top-0 end-0 p-3" style="z-index: 1100;">
+            {% if messages %}
+                {% for message in messages %}
+                <div class="toast align-items-center text-white bg-{{ message.tags }} border-0 show mb-2" role="alert" aria-live="assertive" aria-atomic="true" data-bs-delay="4000">
+                    <div class="d-flex">
+                    <div class="toast-body">
+                        {{ message }}
+                    </div>
+                    <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+                    </div>
+                </div>
+                {% endfor %}
+            {% endif %}
+            </div>
+
+            <!-- Main page content -->
             {% block content %}
             <!-- Content of child templates will be inserted here -->
             {% endblock %}
+
         </div>
     </main>
 
     <footer>
         <!-- Footer content goes here -->
     </footer>
+
+    {% block scripts %}
+    <!-- Additional scripts for child templates can be added here -->
+    {% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!-- <script src="{% static 'trellomini/js/toast.js' %}"></script> -->
 </body>
 </html>
