--- a/trellomini/trellomini/templates/dashboard/dashboard.html
+++ b/trellomini/trellomini/templates/dashboard/dashboard.html
@@ -11,14 +11,14 @@
         <ul class="list-group mb-3">
           {% for project in projects %}
             <li class="list-group-item d-flex justify-content-between align-items-center">
-              <a href="{% url 'project_detail' project.pk %}">{{ project.name }}</a>
+              <a href="{% url 'project' %}">{{ project.name }}</a>
               <span class="badge bg-primary rounded-pill">{{ project.tasks.count }} tasks</span>
             </li>
           {% empty %}
             <li class="list-group-item">No projects available.</li>
           {% endfor %}
         </ul>
-        <a href="{% url 'project_create' %}" class="btn btn-primary">Create New Project</a>
+        <a href="{% url 'project_form' %}" class="btn btn-primary">Create New Project</a>
       </div>
     </div>
   </section>
