--- a/trellomini/trellomini/templates/task_confirm_delete/task_confirm_delete.html
+++ b/trellomini/trellomini/templates/task_confirm_delete/task_confirm_delete.html
@@ -10,7 +10,7 @@
 
       <form method="POST">
         {% csrf_token %}
-        <a href="{% url 'project_detail' project.pk %}" class="btn btn-secondary">Cancel</a>
+        <a href="{% url 'task' %}" class="btn btn-secondary">Cancel</a>
         <button type="submit" class="btn btn-danger">Yes, Delete</button>
       </form>
     </div>
