Wired dashboard to the project form and signout. Updated the dashboard integration with sidebar nav.

--- a/trellomini/trellomini/templates/project_form/project_form.html
+++ b/trellomini/trellomini/templates/project_form/project_form.html
@@ -13,7 +13,7 @@
             action="{% if form.instance.pk %}
                       {% url 'project_update' form.instance.pk %}
                     {% else %}
-                      {% url 'project_create' %}
+                      {% url 'project_form' %}
                     {% endif %}">
         {% csrf_token %}
 
