--- a/trellomini/trellomini/templates/base.html
+++ b/trellomini/trellomini/templates/base.html
@@ -9,24 +9,53 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
-    <title>{% block title %}My App{% endblock %}</title>
+    <title>{% block title %}Trello-Mini{% endblock %}</title>
 </head>
 <body>
-    <header>
-        <!-- Navigation menu goes here -->
-    </header>
-
     <main>
-        <div class="container">
-            {% block content %}
-            <!-- Content of child templates will be inserted here -->
-            {% endblock %}
-        </div>
+        <div class="d-flex">
+            <!-- Sidebar (left) -->
+            <div class="d-flex flex-column flex-shrink-0 p-3 text-bg-dark min-vh-100" style="width: 280px;">
+              <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+                <span class="fs-4">Trello-Mini</span>
+              </a>
+              <hr>
+              <ul class="nav nav-pills flex-column mb-auto">
+                <li class="nav-item">
+                  <a href="{% url 'project_list' %}" class="nav-link {% if request.path == '/' %}active{% else %}text-white{% endif %}">
+                    Home
+                  </a>
+                </li>
+                <li>
+                  <a href="{% url 'project_create' %}" class="nav-link text-white">
+                    New Project
+                  </a>
+                </li>
+              </ul>
+              <hr>
+              <div class="dropdown">
+                <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                  <strong>{{ user.username }}</strong>
+                </a>
+                <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
+                  <li><a class="dropdown-item" href="{% url 'project_create' %}">New project...</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="{% url 'logout' %}">Sign out</a></li>
+                </ul>
+              </div>
+            </div>
+        
+            <!-- Main content (right) -->
+            <div class="flex-grow-1 p-4">
+              {% block content %}
+              {% endblock %}
+            </div>
+          </div>
     </main>
 
-    <footer>
-        <!-- Footer content goes here -->
-    </footer>
+    {% block scripts %}
+
+    {% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
