--- a/trellomini/trellomini/templates/project_confirm_delete/project_confirm_delete.html
+++ b/trellomini/trellomini/templates/project_confirm_delete/project_confirm_delete.html
@@ -9,7 +9,7 @@
 
       <form method="POST">
         {% csrf_token %}
-        <a href="{% url 'project' %}" class="btn btn-secondary">Cancel</a>
+        <a href="{% url 'project_detail' project.id %}" class="btn btn-secondary">Cancel</a>
         <button type="submit" class="btn btn-danger">Yes, Delete</button>
       </form>
     </div>
