--- a/trellomini/trellomini/templates/base.html
+++ b/trellomini/trellomini/templates/base.html
@@ -41,7 +41,11 @@
                 <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
                   <li><a class="dropdown-item" href="{% url 'project_create' %}">New project...</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="{% url 'logout' %}">Sign out</a></li>
+                  <li>
+                    <form method="POST" action="{% url 'logout' %}">
+                      {% csrf_token %}
+                      <button type="submit" class="dropdown-item">Sign out</button>
+                    </form>
                 </ul>
               </div>
             </div>
