updated the form title to be used instead of form name in project creation.

--- a/trellomini/trellomini/templates/project_form/project_form.html
+++ b/trellomini/trellomini/templates/project_form/project_form.html
@@ -18,8 +18,8 @@
 
         <!-- Name -->
         <div class="mb-3">
-          <label for="{{ form.name.id_for_label }}">Project Name</label>
-          {{ form.name }}
+          <label for="{{ form.title.id_for_label }}">Project Name</label>
+          {{ form.title }}
         </div>
 
         <!-- Description -->
