--- a/trellomini/trellomini/templates/project/project.html
+++ b/trellomini/trellomini/templates/project/project.html
@@ -10,9 +10,11 @@
     <p>{{ project.description }}</p>
     <p><small>Created: {{ project.created_at }} | Updated: {{ project.updated_at }}</small></p>
     <div class="d-flex gap-2">
-      <a href="{% url 'project_update' project.id %}" class="btn btn-primary">Edit Project</a>
-      <a href="{% url 'project_delete' project.id %}" class="btn btn-danger">Delete Project</a>
-      <a href="{% url 'task_create' project.id %}" class="btn btn-success">Add Task</a>
+      {% if project.owner == user %}
+        <a href="{% url 'project_update' project.id %}" class="btn btn-primary">Edit Project</a>
+        <a href="{% url 'project_delete' project.id %}" class="btn btn-danger">Delete Project</a>
+        <a href="{% url 'task_create' project.id %}" class="btn btn-success">Add Task</a>
+      {% endif %}
     </div>
   </div>
 
